# os-challenge

./: .gitignore  CMakeLists.txt  README.md  flake.nix  run_benchmark.sh  setup-and-use-vagrant-box.md
src/: cache.c  cache.h  dispatcher_queue.c  dispatcher_queue.h  hashing.c  hashing.h  main.c  protocol.c  protocol.h  server.c  server.h  thread-pool.c  thread-pool.h
src/common/: logging.h
src/server/: main.c  main.h
tests/: granular-locking.md  hashing.md  loop-unroll.md  multi-stage-architecture.md  multithreading.md  priority.md  vectorize.md
